# project_S

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose-commented.md  docker-compose.yml  package-lock.json  package.json  project_S.sln  project_S.slnx
Documentation/: COMMANDS.md  CSV_PROCESSING_AND_AZURE_ARCHITECTURE.md  IMPLEMENTATIONS.md  TESTING_GUIDE.md  _0_Docker_Notes.md  _10_HOW_IT_ALL_CONNECTS.md  _11_FRONTEND_ARCHITECTURE.md  _12_NLP_SERVICE_ARCHITECTURE.md  _13_FULLSTACK_ARCHITECTURE.md  _1_ASP_NET_Basics_Setup.md  _2_ASPNET_LOCAL_DEVELOPMENT_SETUP.md  _3_QUICKSTART_LOCAL_DEV.md  _4_TESTING_AND_CONTAINERIZATION_GUIDE.md  _5_ARCHITECTURE.md  _6_TESTING_STRATEGY_AND_INTERVIEW_PREP.md  _7_SCALABILITY_AND_PRODUCTION_DESIGN.md  _8_ENTITIES_MIGRATIONS_DBCONTEXT.md  _9_WHY_THESE_ENTITIES.md
backend/: BACKEND_STRUCTURE.md
backend/src/02-Infrastructure/: ProjectS.Infrastructure.csproj
backend/src/03-Web/: ProjectS.Web.csproj  ProjectS.Web.http
backend/src/_01_Core/Entities/: KpiAggregate.cs  ResponseValue.cs  SentimentResult.cs  Survey.cs  SurveyColumn.cs  (+3 more)
backend/src/_02_Infrastructure/: ProjectS.Infrastructure.csproj
backend/src/_03_Web_API/: Program.cs  ProjectS.Web.csproj  appsettings.Development.json  appsettings.json
frontend/: package-lock.json  package.json
frontend-angular/: angular.json  package-lock.json  package.json
frontend-angular/src/: proxy.conf.json
frontend-angular/src/app/: app.config.ts  app.html  app.routes.ts
frontend/app/: app.vue
nlp/: Dockerfile  pyproject.toml  requirements.txt
nlp/app/: main.py  model.py
(+19 files in other folders)
